<resources>
    <string name="InfoPopupText">To Do\nверсия 1.4.3 (2025.12.29)\nавтор: Абайжан Алимбеков\n\n</string>
    <string name="about">О программе…</string>
    <string name="app_name">To Do</string>
    <string name="default_web_client_id">293189029433-2a42buudtq3m5vue9fo84th81ih8o25t.apps.googleusercontent.com</string>
    <string name="service_name_alarm">Служба напоминаний</string>
    <string name="service_name_export">Служба экспорта</string>
    <string name="service_name_import_palm">Служба импорта (Palm)</string>
    <string name="service_name_import_xml">Служба импорта (XML)</string>
    <string name="service_name_password_change">Служба смены пароля</string>
    <string name="AlarmButtonCancel">Отмена</string>
    <string name="AlarmButtonOK">ОК</string>
    <string name="AlarmServiceBackgroundMessage">Проверка списка задач на наличие напоминаний…</string>
    <string name="AlarmTextAlarm">Напоминание</string>
    <string name="AlarmTextDaysEarlier">дней раньше</string>
    <string name="AlarmTextTime">Время напоминания:</string>
    <string name="AlarmTextNextAlarm">Следующее напоминание:</string>
    <string name="AlarmTitle">Напоминание</string>
    <string name="Category_All">Все</string>
    <string name="Category_Edit">Редактировать категории…</string>
    <string name="Category_Unfiled">Без категории</string>
    <string-array name="CategoryFilterList">
        <item>@string/Category_All</item>
        <item>@string/Category_Unfiled</item>
    </string-array>
    <string name="CategoryListButtonCancelText">Отмена</string>
    <string name="CategoryListButtonNewText">Создать</string>
    <string name="CategoryListButtonOKText">ОК</string>
    <string name="ConfirmationTextDeleteNote">Удалить эту заметку?</string>
    <string name="ConfirmationTextDeleteToDo">Удалить эту задачу?</string>
    <string name="ConfirmationButtonCancel">Отмена</string>
    <string name="ConfirmationButtonOK">ОК</string>
    <string name="DatePickerCancel">Отмена</string>
    <string name="DatePickerFri">Пт</string>
    <string name="DatePickerMon">Пн</string>
    <string name="DatePickerSat">Сб</string>
    <string name="DatePickerSun">Вс</string>
    <string name="DatePickerTitleDueDate">Срок выполнения</string>
    <string name="DatePickerTitleEndingOn">Заканчивается</string>
    <string name="DatePickerThu">Чт</string>
    <string name="DatePickerToday">Сегодня</string>
    <string name="DatePickerTue">Вт</string>
    <string name="DatePickerWed">Ср</string>
    <string name="DetailButtonCancel">Отмена</string>
    <string name="DetailButtonDelete">Удалить…</string>
    <string name="DetailButtonOK">ОК</string>
    <string name="DetailDescriptionPlaceholder">Описание</string>
    <string name="DetailNotset">Нет</string>
    <string name="DetailTextAlarm">Напоминание:</string>
    <string name="DetailTextCategory">Категория:</string>
    <string name="DetailTextCompleted">Завершено:</string>
    <plurals name="DetailTextDaysEarlier">
        <item quantity="one">%d день раньше</item>
        <item quantity="other">%d дней раньше</item>
    </plurals>
    <string name="DetailTextDueDate">Срок:</string>
    <string name="DetailTextHideUntil">Скрывать до:</string>
    <string name="DetailTextPriority">Приоритет:</string>
    <string name="DetailTextPrivate">Личное:</string>
    <string name="DetailTextRepeat">Повтор:</string>
    <string name="DialogConfirmPassword">Повторите:</string>
    <string name="DialogEnterPassword">Пароль:</string>
    <string name="DialogExportTo">Данные будут сохранены в:\n%s</string>
    <string name="DialogNewPassword">Новый пароль:</string>
    <string name="DialogOldPassword">Старый пароль:</string>
    <string name="DialogShowPassword">Показать пароль</string>
    <string-array name="DueDateFormatList">
        <item>@string/DueDateFormatToday</item>
        <item>@string/DueDateFormatTomorrow</item>
        <item>@string/DueDateFormatDayOfWeek</item>
        <item>@string/DueDateFormatDayOfWeek</item>
        <item>@string/DueDateFormatDayOfWeek</item>
        <item>@string/DueDateFormatDayOfWeek</item>
        <item>@string/DueDateFormatDayOfWeek</item>
        <item>@string/DueDateFormatNextWeek</item>
    </string-array>
    <string name="DueDateFormatDayOfWeek">d.MM – EEEE</string>
    <string name="DueDateFormatNextWeek">d.MM – «Через неделю»</string>
    <string name="DueDateFormatToday">d.MM – «Сегодня»</string>
    <string name="DueDateFormatTomorrow">d.MM – «Завтра»</string>
    <string name="DueDateNoDate">Без даты</string>
    <string name="DueDateOther">Выбрать дату…</string>
    <string name="ErrorDescriptionBlank">Описание задачи пустое.</string>
    <string name="ErrorCannotFind">Не удалось найти %s</string>
    <string name="ErrorCategoryID">Неверная категория.</string>
    <string name="ErrorExportCantMkdirs">Не удалось создать папку %s</string>
    <string name="ErrorExportFailed">Ошибка экспорта</string>
    <string name="ErrorExportPermissionDenied">Нет права записи в %s. Разрешите доступ или выберите другую папку.</string>
    <string name="ErrorFailedToAddRecords">Не удалось добавить записи</string>
    <string name="ErrorFileNotFound">Файл не найден</string>
    <string name="ErrorImportCantRead">Не удалось прочитать файл %s</string>
    <string name="ErrorImportFailed">Ошибка импорта</string>
    <string name="ErrorImportNotFound">Файл импорта %s не найден</string>
    <string name="ErrorImportPermissionDenied">Нет права чтения %s. Разрешите доступ или переместите файл.</string>
    <string name="ErrorNoRecordsImported">Не импортировано ни одной записи</string>
    <string name="ErrorNotImplemented">Ещё не реализовано</string>
    <string name="ErrorPasswordMismatch">Новые пароли не совпадают.</string>
    <string name="ErrorPriority">Неверный приоритет.</string>
    <string name="ErrorSDNotFound">Носитель данных не найден</string>
    <string name="ExportButtonCancel">Отмена</string>
    <string name="ExportButtonOK">Экспорт</string>
    <string name="ExportEditDirectoryHint">Папка для сохранения файла</string>
    <string name="ExportEditFileHint">Имя файла экспорта</string>
    <string name="ExportFileDialogTitle">Экспорт файла To Do</string>
    <string name="ExportRadioButtonPrivateFolder">Сохранить во внутреннее хранилище приложения</string>
    <string name="ExportRadioButtonPublicFolder">Сохранить в общедоступное хранилище</string>
    <string name="ExportTextDirectory">Папка:</string>
    <string name="ExportTextFile">Имя файла:</string>
    <string name="ExportTextIncludePrivate">Включить личные:</string>
    <string name="ExportTextPasswordNotSetWarning">Пароль не задан в настройках. Зашифрованные записи не будут экспортированы!</string>
    <string name="HideButtonCancel">Отмена</string>
    <string name="HideButtonOK">ОК</string>
    <string name="HideTextHide">Скрывать до</string>
    <string name="HideTextDaysEarlier">дней раньше</string>
    <string name="HideTextShow">Показывать после:</string>
    <string name="HideTitle">Скрывать, если срок ещё не наступил</string>
    <string name="ImportButtonCancel">Отмена</string>
    <string name="ImportButtonOK">Импорт</string>
    <string name="ImportEditDirectoryHint">Папка с файлом импорта</string>
    <string name="ImportEditFileHint">Имя файла импорта</string>
    <string name="ImportEditPasswordHint">Пароль</string>
    <string name="ImportFileDialogTitle">Импорт файла To Do</string>
    <string name="ImportRadioButtonPrivateFolder">Файл из внутреннего хранилища приложения</string>
    <string name="ImportRadioButtonPublicFolder">Файл из общедоступного хранилища</string>
    <string name="ImportTextDirectory">Папка:</string>
    <string name="ImportTextFile">Имя файла:</string>
    <string name="ImportTextImportType">Тип импорта:</string>
    <string name="ImportTextIncludePrivate">Включить личные:</string>
    <string name="ImportTextPassword">Сохранённый пароль:</string>
    <string name="ImportTextPasswordNotSetWarning">Пароль не задан в настройках. Личные записи не будут зашифрованы!</string>
    <string name="ImportTextShowPassword">Показать пароль</string>
    <string-array name="ImportTypeList">
        <item>Очистить и заменить</item>
        <item>Перезаписать</item>
        <item>Обновить существующие</item>
        <item>Слияние</item>
        <item>Добавить новые</item>
        <item>Тест (без изменений)</item>
    </string-array>
    <string name="InfoButtonOK">ОК</string>
    <string name="ListButtonNew">Создать</string>
    <string name="ListDueDateFormat">d.MM</string>
    <string name="MenuExport">Экспорт данных</string>
    <string name="MenuImport">Импорт данных</string>
    <string name="MenuInfo">О программе…</string>
    <string name="MenuLock">Заблокировать зашифрованные записи</string>
    <string name="MenuPasswordChange">Сменить пароль</string>
    <string name="MenuPasswordSet">Установить пароль</string>
    <string name="MenuSettings">Настройки</string>
    <string name="MenuUnlock">Разблокировать зашифрованные записи</string>
    <string name="MenuShowCompleted">Показать/скрыть завершённые</string>
    <string-array name="MonList">
        <item>@string/MonthJan</item>
        <item>@string/MonthFeb</item>
        <item>@string/MonthMar</item>
        <item>@string/MonthApr</item>
        <item>@string/MonthMay</item>
        <item>@string/MonthJun</item>
        <item>@string/MonthJul</item>
        <item>@string/MonthAug</item>
        <item>@string/MonthSep</item>
        <item>@string/MonthOct</item>
        <item>@string/MonthNov</item>
        <item>@string/MonthDec</item>
    </string-array>
    <string-array name="MonthList">
        <item>@string/MonthJanuary</item>
        <item>@string/MonthFebruary</item>
        <item>@string/MonthMarch</item>
        <item>@string/MonthApril</item>
        <item>@string/MonthMay</item>
        <item>@string/MonthJune</item>
        <item>@string/MonthJuly</item>
        <item>@string/MonthAugust</item>
        <item>@string/MonthSeptember</item>
        <item>@string/MonthOctober</item>
        <item>@string/MonthNovember</item>
        <item>@string/MonthDecember</item>
    </string-array>
    <string name="MonthApr">апр</string>
    <string name="MonthApril">Апрель</string>
    <string name="MonthAug">авг</string>
    <string name="MonthAugust">Август</string>
    <string name="MonthDec">дек</string>
    <string name="MonthDecember">Декабрь</string>
    <string name="MonthFeb">фев</string>
    <string name="MonthFebruary">Февраль</string>
    <string name="MonthJan">янв</string>
    <string name="MonthJanuary">Январь</string>
    <string name="MonthJul">июл</string>
    <string name="MonthJuly">Июль</string>
    <string name="MonthJun">июн</string>
    <string name="MonthJune">Июнь</string>
    <string name="MonthMar">мар</string>
    <string name="MonthMarch">Март</string>
    <string name="MonthMay">май</string>
    <string name="MonthNov">ноя</string>
    <string name="MonthNovember">Ноябрь</string>
    <string name="MonthOct">окт</string>
    <string name="MonthOctober">Октябрь</string>
    <string name="MonthSep">сен</string>
    <string name="MonthSeptember">Сентябрь</string>
    <string name="NoteButtonDelete">Удалить…</string>
    <string name="NoteButtonOK">Готово</string>
    <string name="NotificationChannelDueName">Задачи на сегодня</string>
    <string name="NotificationChannelDueDescription">Уведомления о задачах, которые нужно выполнить сегодня или для которых установлено раннее напоминание</string>
    <string name="NotificationChannelOverdueName">Просроченные задачи</string>
    <string name="NotificationChannelOverdueDescription">Уведомления о просроченных задачах</string>
    <string name="NotificationChannelSilentName">Обновление напоминаний</string>
    <string name="TooltipAlarm">Напоминание</string>
    <string name="TooltipNote">Заметка</string>
    <string name="TooltipRepeat">Повторяется</string>
</resources>